# me-sim-wrap

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  pyproject.toml
benchmarks/: README.md  benchmark_release.py
docs/: compatibility.md  data-provenance.md  error.txt  internal-alpha.md  model-limitations.md  phase-5-dwsim-parity.md  test.txt  thermodynamic-systems.md
dwsim-windows/: DWSIM.sln  README.md
scripts/: capture_dwsim_reference.ps1  capture_dwsim_thermo_package.ps1  clone_dwsim_case_with_property.ps1  configure_dwsim_advanced_interaction.ps1  create_dwsim_thermo_case.ps1  extract_chemsep_correlations.py  extract_dwsim_black_oil_data.ps1  extract_dwsim_chao_seader_data.ps1  extract_dwsim_ideal_electrolyte_data.ps1  extract_dwsim_lkp_data.ps1  extract_dwsim_modfac_data.ps1  extract_dwsim_pcsaft_data.ps1  extract_dwsim_prsv2_data.ps1  extract_dwsim_seawater_data.ps1  extract_dwsim_steam_tables_data.ps1  extract_dwsim_unifac_data.ps1  extract_dwsim_uniquac_data.ps1  extract_dwsim_wilson_data.ps1  validate.py
tests/: black-oil-n-pentane-n-hexane.dwxmz  chao-seader-methane-n-pentane.dwxmz  gerg-2008-methane-ethane.dwxmz  grayson-streed-methane-n-pentane.dwxmz  ideal-aqueous-electrolyte-water-sodium-chloride.dwxmz  lkp-methane-n-pentane.dwxmz  modfac-dortmund-1-propanol-water.dwxmz  modfac-nist-1-propanol-water.dwxmz  pc-saft-methane-ethane.dwxmz  pr-flash.dwxmz  pr-flash_backup.dwxmz  pr-lk-methane-ethane.dwxmz  pr-t1.dwxmz  pr78-advanced-mercury-methane.dwxmz  pr78-ethane-methanol.dwxmz  seawater-water-salt.dwxmz  (+122 more)
(+771 files in other folders)
