[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "me-sim-wrap"
version = "0.1.0a0"
description = "Cross-platform process simulation kernel"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.136,<1", "pydantic>=2.12,<3", "uvicorn>=0.30,<1"]

[tool.setuptools.packages.find]
where = ["src"]
