[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "me-sim-wrap"
version = "0.1.0rc1"
description = "Cross-platform process simulation kernel"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.136,<1", "pydantic>=2.12,<3", "scipy>=1.12,<2", "uvicorn>=0.30,<1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/mesim/data/compounds" = ["data/compounds/*.json"]
"share/mesim/data/correlations" = ["data/correlations/*.json"]
"share/mesim/data/interactions" = ["data/interactions/*.json"]
"share/mesim/data/reactions" = ["data/reactions/*.json"]
